--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.class
 obj/
 out/
+target/
 
 # Log file
 *.log
@@ -23,3 +24,5 @@ out/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/
